--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="%PUBLIC_URL%/favicon.ico" />
 
     <title>BEATKINO</title>
     <meta
@@ -16,7 +16,7 @@
     <meta property="og:title" content="BEATKINO, independent movies on stream"/>
     <meat property="og:description" content="BEATKINO is a free stream platform for independent movies from around the world."/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="/metaPicture.jpg"/>
+    <meta property="og:image" content="%PUBLIC_URL%/metaPicture.jpg"/>
     <meta property="og:url" content="https://beatkino.com/"/>
     <meta name="twitter:card" content="app">
 
