--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
     <meta name="keywords" content="films, movies, cinema, streaming"/>
     <meta property="og:title" content="BEATKINO, independent movies on stream"/>
-    <meat property="og:description" content="BEATKINO is a free stream platform for independent movies from around the world."/>
+    <meta property="og:description" content="BEATKINO is a free stream platform for independent movies from around the world."/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="%PUBLIC_URL%/metaPicture.jpg"/>
     <meta property="og:url" content="https://beatkino.com/"/>
