--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?" type="image/x-icon" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png" /> <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>BEATKINO</title>
+    <title>BEATKINO independent films on stream</title>
     <meta
       name="description"
       content="BEATKINO is a free stream platform for independent movies from around the world. Our catalog focused on fiction, documentary and animation films."
@@ -17,14 +18,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="BEATKINO, independent movies on stream">
     <meta property="og:description" content="BEATKINO is a free stream platform for independent movies from around the world.">
-    <meta property="og:image" content="%PUBLIC_URL%/metaPicture.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/metaPicture.webp">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="https://beatkino.com/">
     <meta property="twitter:url" content="https://beatkino.com/">
     <meta name="twitter:title" content="BEATKINO, independent movies on stream">
     <meta name="twitter:description" content="BEATKINO is a free stream platform for independent movies from around the world.">
-    <meta name="twitter:image" content="%PUBLIC_URL%/metaPicture.jpg">
+    <meta name="twitter:image" content="%PUBLIC_URL%/metaPicture.webp">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
