--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
     />
     <meta name="keywords" content="films, movies, cinema, streaming"/>
       <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="http://beatkino.com/">
+    <meta property="og:url" content="https://beatkino.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="BEATKINO, independent movies on stream">
     <meta property="og:description" content="BEATKINO is a free stream platform for independent movies from around the world.">
     <meta property="og:image" content="%PUBLIC_URL%/metaPicture.webp">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="http://beatkino.com/">
-    <meta property="twitter:url" content="http://beatkino.com/">
+    <meta property="twitter:domain" content="https://beatkino.com/">
+    <meta property="twitter:url" content="https://beatkino.com/">
     <meta name="twitter:title" content="BEATKINO, independent movies on stream">
     <meta name="twitter:description" content="BEATKINO is a free stream platform for independent movies from around the world.">
     <meta name="twitter:image" content="%PUBLIC_URL%/metaPicture.webp">
