--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="BEATKINO, independent movies on stream">
     <meta property="og:description" content="BEATKINO is a free stream platform for independent movies from around the world.">
-    <meta property="og:image" content="%PUBLIC_URL%/metaPicture.webp">
+    <meta property="og:image" content="%PUBLIC_URL%/metaPicture.jpg">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="https://beatkino.com/">
     <meta property="twitter:url" content="https://beatkino.com/">
     <meta name="twitter:title" content="BEATKINO, independent movies on stream">
     <meta name="twitter:description" content="BEATKINO is a free stream platform for independent movies from around the world.">
-    <meta name="twitter:image" content="%PUBLIC_URL%/metaPicture.webp">
+    <meta name="twitter:image" content="%PUBLIC_URL%/metaPicture.jpg">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
